# FnQL

./: .gitattributes  .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  CREDITS.md  Makefile  README.md  make-macosx-app.sh  make-macosx-ub2.sh  meson.build  meson_options.txt  pytest.ini
.github/: issue-triage-config.json  release-notes-instructions.md
.github/scripts/: issue_triage.py
.github/workflows/: glx-verification.yml  issue-triage.yml  linux-verification.yml  release.yml  vulkan-verification.yml
.install/: .gitignore  README.html
code/asm/: snd_mix_x86_64_preprocessed.S
code/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.cpp  be_aas_cluster.cpp  be_aas_debug.cpp  be_aas_debug.h  be_aas_def.h  be_aas_entity.cpp  be_aas_entity.h  be_aas_file.cpp  be_aas_file.h  be_aas_main.cpp  be_aas_main.h  be_aas_move.cpp  be_aas_move.h  be_aas_optimize.cpp  be_aas_reach.cpp  be_aas_route.cpp  be_aas_route.h  be_aas_routealt.cpp  be_aas_sample.cpp  be_ai_char.cpp  be_ai_chat.cpp  be_ai_chat.h  be_ai_gen.cpp  be_ai_goal.cpp  be_ai_goal.h  be_ai_move.cpp  be_ai_move.h  be_ai_weap.cpp  be_ai_weap.h  be_ai_weight.cpp  be_ai_weight.h  be_ea.cpp  be_interface.cpp  be_interface.h  botlib.h  l_crc.cpp  l_crc.h  (+13 more)
code/cgame/: cg_public.h
code/client/: awesomium_backend_win32.cpp  awesomium_backend_win32.hpp  canvas_geometry.hpp  cl_avi.cpp  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_curl.cpp  cl_curl.h  cl_hud.cpp  cl_input.cpp  cl_jpeg.cpp  cl_keys.cpp  cl_main.cpp  cl_net_chan.cpp  cl_parse.cpp  cl_scrn.cpp  cl_ui.cpp  cl_webpak.cpp  cl_webui.cpp  cl_workshop.cpp  client.h  client_cpp.h  client_cvar_compat.hpp  demo_stream.hpp  input_compat.hpp  keycodes.h  keys.h  ql_cgame_imports.inc  ql_font_bridge.hpp  retail_challenge.hpp  webpak_format.h  webui_backend.hpp  window_resize.hpp
code/game/: g_public.h
code/platform/: fnql_steam.cpp  fnql_steam.h  fnql_steam_api.h  fnql_steam_stats.hpp  fnql_workshop.cpp  window_placement.hpp
code/qcommon/: bsp_v43.h  cm_load.c  cm_local.h  cm_model_handles.h  cm_patch.h  cm_trace.c  cm_trace_contract.h  cmd.c  common.c  cvar.c  files.c  history.c  huffman_static.c  json.h  keys.c  msg.c  msg.cpp  net_address.hpp  net_chan.c  net_chan.cpp  net_ip.c  netchan_codec.hpp  netchan_profile.h  netchan_safety.hpp  protocol_contract.hpp  q_shared.c  q_shared.h  qcommon.h  qfiles.h  ql_bsp.h  quakelive_pk3_xor.h  steam_path_shared.h  surfaceflags.h  unzip.c  unzip.h  vm.c  vm_aarch64.c  vm_local.h  vm_x86.c
code/renderer/: qgl.h  tr_animation.c  tr_arb.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_flares.c  tr_glx_compat.h  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_vbo.c  tr_world.c
code/renderer2/: qgl.h  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_curve.c  tr_extensions.c  tr_glsl.c  tr_image.c  tr_image_dds.c  tr_init.c  tr_local.h  tr_main.c  tr_model.c  tr_model_iqm.c  tr_postprocess.c  tr_postprocess.h  tr_scene.c  tr_shade.c  tr_shader.c  tr_shadows.c  tr_surface.c  tr_vbo.c  tr_world.c
code/renderercommon/: ql_font_text.h  tr_cubemap.h  tr_dlight_shadow.h  tr_dlight_shadow_casters.h  tr_fnq3_bloom_config.h  tr_fog_math.h  tr_font.c  tr_font_stash.c  tr_global_fog.h  tr_glx_api.h  tr_glx_bridge.h  tr_glx_public.h  tr_image_png.c  tr_image_tga.c  tr_image_wal.c  tr_lens_flare.h  tr_levelshot.h  tr_liquid.h  tr_motion_blur.h  tr_muzzle_flash_light.h  tr_portal_plan.h  tr_public.h  tr_ql_ad_debug.h  tr_ql_cvars.h  tr_types.h
code/rendererglx/: glx_caps.cpp  glx_caps.h  glx_caps_logic.h  glx_color_math.h  glx_debug.cpp  glx_debug.h  (+27 more)
docs/: ASPECT_CORRECTION.md  AUDIO.md  CONSOLE.md  DISPLAY.md  GLX.md  README.Linux  RTX.md  SCREENSHOTS.md  VISUALS.md  fnql-changes.txt  fnql.htm  fnql.md  q3url_add.cmd
scripts/: audio_zone_sweep.py  build_root_archive.py  build_webpak.py  changelog.py  check_elf_glibc.py  check_windows_runtime_deps.py  dlight_shadow_release_gate.py  dlight_shadow_test.py  fetch_steam_provider.py  fnql_meta.py  generate_docs.py  generate_standard_audio_zones.py  generate_stock_ql_sidecars.py  glx_promotion.py  glx_runtime_sweep.py  macos_bundle.py  manual_release.py  msvc_meson.py  probe_protocol91.py  probe_protocol91_session.py  probe_zmq.py  release.py  root_archive.py  rtx_runtime_smoke.py  stock_ql_maps.py  stringify_shader.py  verify_release_layout.py  version.py  vk_runtime_sweep.py  windows-arm64-cross.ini  windows_pe.py
subprojects/: fontstash.wrap  libjpeg-turbo.wrap  libpng.wrap  ogg.wrap  openal-soft.wrap  vorbis.wrap  zlib.wrap
subprojects/packagefiles/vorbis/: meson.build  meson_options.txt
subprojects/packagefiles/vorbis/lib/: meson.build
subprojects/packagefiles/vorbis/test/: meson.build
tests/: cgame_native_bridge_source_tests.py  changelog_tests.py  check_elf_glibc_tests.py  client_cvar_compat_source_tests.py  client_cvar_compat_tests.cpp  collision_model_parity_source_tests.py  collision_model_parity_tests.cpp  csm_plan_source_tests.py  csm_shadow_cache_source_tests.py  cvar_factory_snapshot_tests.py  demo_stream_tests.cpp  dlight_shadow_bias_tests.py  dlight_shadow_release_gate_tests.py  dlight_shadow_stability_tests.py  dlight_shadow_test_tests.py  factory_catalog_tests.cpp  factory_rotation_tests.cpp  factory_runtime_source_tests.py  fnq3_bloom_parity_source_tests.py  generate_docs_tests.py  global_fog_source_tests.py  global_fog_tests.cpp  input_compat_tests.cpp  join_menu_source_tests.py  json_document_tests.cpp  launch_and_transition_source_tests.py  levelshot_validation_tests.cpp  liquid_interaction_source_tests.py  liquid_rendering_source_tests.py  macos_bundle_tests.py  macos_support_source_tests.py  map_overbright_cap_source_tests.py  message_codec_tests.cpp  msvc_meson_source_tests.py  native_cgame_abi_probe_runtime_tests.py  netchan_codec_tests.cpp  netchan_profile_tests.cpp  netchan_safety_tests.cpp  personal_shadow_source_tests.py  platform_port_safety_tests.py  (+53 more)
version/: fnql_steam_provider.json  fnql_version.h
(+619 files in other folders)
